# content-based-music-recommender

./: .env.example  .gitignore  README.md  inference.py  pyproject.toml  run_web.py  train.py
src/: byol.py  config.py  dataset.py  encoder.py  utils.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html
